# swarm-robotics-parachain

./: Cargo.toml  README.md  chain_spec.json
pallets/swarm-robot-pallet/: Cargo.toml
pallets/swarm-robot-pallet/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
runtime/src/configs/: mod.rs
swarmbase-ui/: package-lock.json  package.json
swarmbase-ui/app/: globals.css  layout.tsx  page.tsx
swarmbase-ui/app/components/: CommandLog.tsx  RobotCanvas.tsx
swarmbase-ui/app/lib/: polkadot.ts  utils.ts
